gateway_controller_testing/experimental_k8s_resources/webtransport related/WT_HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: default
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /get
          # This allows the WebTransport Extended CONNECT method
          method: CONNECT
      backendRefs:
        - name: backend
          port: 3000
